machbase/neo-web#830 - fix stacking z-index 2

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -95,6 +95,7 @@ $side-extension-form: 1000;
 $dsh-draggable-panel-header-idx: 1000;
 $dsh-split-panel-handler-after-idx: 10;
 $dsh-split-panel-handler-before-idx: 9;
+$dsh-view-page-idx: 9;
 $dsh-edit-page-idx: 10;
 // Menu modal
 $menu-modal-idx: 999999;
