--- a/src/components/dashboard/index.scss
+++ b/src/components/dashboard/index.scss
@@ -1,3 +1,5 @@
+@import '/src/assets/scss/theme.scss';
+
 .react-resizable-handle::after {
     border-right: 2px solid rgba(255, 255, 255, 0.4) !important;
     border-bottom: 2px solid rgba(255, 255, 255, 0.4) !important;
@@ -76,6 +78,7 @@
         }
     }
     .board-body {
+        z-index: $dsh-view-page-idx;
         overflow: auto;
         height: calc(100% - 40px);
         position: relative;
